<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userPicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@android:color/transparent"
        android:elevation="3sp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullName_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/full_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userPicture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fullName_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userEmail_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userPicture"
        app:layout_constraintTop_toBottomOf="@+id/fullName_1" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/useremail"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fullName"
        app:layout_constraintStart_toStartOf="@+id/fullName"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />
</androidx.constraintlayout.widget.ConstraintLayout>